Fixed color renderer class